<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GithubUser</string>
    <string name="hello_world">Hello world!</string>
    <string name="done">Save</string>
    <string name="scan">Next</string>
    <string name="cantCrop">Cant crop the image, change the points</string>
    <string name="ok">Ok</string>
    <string name="loading">Loading</string>

    <string name="blank">""</string>

    <string name="placeholder_ellipsize_end">%s…</string>
    <string name="placeholder_total_motionpoints">MotionPoints %s</string>
    <string name="placeholder_total_payment">-%s</string>
    <string name="placeholder_action_total_payment">Bayar %s</string>

    <string name="label_error_warning">Perhatian</string>
    <string name="lbl_cards_17">Tutup</string>
    <string name="lbl_current_point_desc_64">Gagal memuat data</string>
    <string name="lbl_current_point_desc_65">Kamu tidak perlu khawatir, Tunggu beberapa saat dan coba lagi</string>

    <string name="coba_lagi">Coba Lagi</string>
    <string name="kembali">Kembali</string>
</resources>
