<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:background="@drawable/bg_bottom_sheet_rounded_white">

        <ImageView
            android:id="@+id/iv_swipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blank"
            app:srcCompat="@drawable/ic_swipe_v2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="39dp"
            app:lottie_rawRes="@raw/failed"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:layout_constraintTop_toBottomOf="@id/iv_swipe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="64dp"
            app:layout_constraintHeight_max="64dp"
            tools:srcCompat="@drawable/ic_payment_failed"
            />

        <TextView
            android:id="@+id/tv_failed_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:layout_marginHorizontal="42dp"
            android:text="@string/lbl_current_point_desc_64"
            android:textColor="@color/colorGondola"
            android:textAlignment="center"
            android:textSize="14sp"
            android:fontFamily="@font/inter_semibold"
            app:layout_constraintTop_toBottomOf="@id/animation_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_failed_desc_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginHorizontal="42dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/lbl_current_point_desc_65"
            android:textColor="@color/colorDimGray"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textIsSelectable="true"
            app:layout_constraintTop_toBottomOf="@id/tv_failed_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_tutup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:layout_marginBottom="30dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/lbl_cards_17"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:fontFamily="@font/inter_heavy"
            app:layout_constraintTop_toBottomOf="@id/tv_failed_desc_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/MaterialButtonGeneralStyleV2"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

